<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/datacollect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data_collect">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/nu_laundry_app"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/subdet"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/weekly_submission_day"
        android:inputType="textPersonName"
        android:textColor="@color/design_default_color_on_secondary"
        android:autofillHints="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <EditText
        android:id="@+id/colldet"
        android:layout_width="325dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/weekly_collection_day"
        android:inputType="textPersonName"
        android:autofillHints="no"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdet" />

    <Button
        android:id="@+id/save"
        android:layout_width="210dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="108dp"
        android:text="@string/save"
        android:onClick="saveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colldet" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save"
        app:layout_constraintVertical_bias="0.59000003" />


</androidx.constraintlayout.widget.ConstraintLayout>